--- a/static/index.html
+++ b/static/index.html
@@ -22,14 +22,14 @@
 <body>
 <div class="reveal">
     <div class="slides">
-        <section data-background-video="graphics/geoscape.mp4">
+        <section id="title" data-background-video="graphics/geoscape.mp4">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
                 <h1>Learning FastAPI</h1>
                 <h3>On Hard Hode</h3>
                 <p><em>Getting out lots of Geo data fast &raquo; </em></p>
             </div>
         </section>
-        <section>
+        <section id="credits">
             <br>
             <h3>Elena Williams</h3>
             <div>github/<b>elena</b></div>
@@ -41,6 +41,68 @@
             <br>
             <div style="color: rgba(255, 255, 255, 0.25); font-size: 50%; text-align: right">"just zis guy, you
                 know?"
+            </div>
+        </section>
+        <section id="doing-today">
+            <h3>What we ARE doing here today:</h3>
+            <ul>
+                <li>Geocoded National Address File (G-NAF)</li>
+                <li><p>FastAPI</p>
+                    <ul>
+                        <li>(APIs) <em>[not really]</em></li>
+                        <li>(Async) <em>[not really]</em></li>
+                        <li>Pydantic</li>
+                    </ul>
+                </li>
+                <li><p>GeoJSON</p></li>
+                <li><p>Pydantic</p></li>
+            </ul>
+        </section>
+        <section id="doing-not-today" style="font-size: 85%; line-height: 2">
+            <h3>What we are NOT doing here today:</h3>
+            <ul>
+                <li><p><b>Not</b> <b>full</b> web application<br>
+                    <em>no frontend here</em></p></li>
+                <li><p><b>Not</b> talking much about <b>data</b> layer<br>
+                    <em>it’s not python and everyone's data is special ✨</em></p></li>
+                <li><p><b>Not</b> talking about <b>deployment</b><br>
+                    <em>because serverless, feel free to pick your own poison</em></p></li>
+            </ul>
+            <p>Per abstract:<br><b>APIs! Async! Type validation! ISO standards!
+                Large geodata!</b></p>
+        </section>
+        <section id="where-do-addresses-1" data-background="graphics/background/adelaide-planning.png">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <b>Where do addresses come from?</b>
+            </div>
+            <br>
+            <div style="padding: 20px;"><div><i><b>&nbsp;</b></i></div></div>
+            <div><i class="subtext">&nbsp;<br>&nbsp;</i></div>
+        </section>
+        <section id="where-do-addresses-2" data-background="graphics/background/adelaide-planning.png">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <b>Where do addresses come from?</b>
+            </div>
+            <br>
+            <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px;">
+                <div><i><b>Local Governments</b></i></div>
+                <div><i class="subtext">"LGAs", eg councils<br>
+                    Not always well resourced; don't always have strict standards</i>
+                </div>
+            </div>
+        </section>
+        <section id="1994" data-background="graphics/background/1994.png">
+            <div style="font-size: 125%; background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; margin-top: -300px">
+                <b>Australia 1994: <img height="70px" style="top: 20px; margin: -20px 0;" src="/graphics/background/ABS.gif"> Census year</b>
+            </div>
+        </section>
+        <section id="owned-by-states" data-background="graphics/background/states-0.png">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; margin-top: -350px; ">
+                <img height="100px" src="/graphics/background/Geoscape_Logo.jpg">
+                <h3>Owned by</h3>
+                <div style="color: rgba(255, 255, 255, 0.25); font-size: 75%;">
+                    Not Government, but Government owned
+                </div>
             </div>
         </section>
     </div>
