work on background and ending

--- a/static/index.html
+++ b/static/index.html
@@ -96,18 +96,21 @@
                 <b>Australia 1994: <img height="70px" style="top: 20px; margin: -20px 0;" src="/graphics/background/ABS.gif"> Census year</b>
             </div>
         </section>
+
         <section id="owned-by-states" data-background="graphics/background/states-0.png">
             <div style="margin-top: 0px; color: rgba(0, 0, 0, 0.85); font-size: 75%;">
                 Not Government, but Government owned
             </div>
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; margin-bottom: 380px; ">
-                <img height="100px" src="/graphics/background/Geoscape_Logo.jpg">
+                <img height="100px" src="/graphics/background/Geoscape_Logo.jpg" />
+                <div style="color: rgba(255,255,255,0.35); font-size: 0.5em; margin: -30px 0 5px 0;"> <em>(formerly: </em>PSMA<em>)</em></div>
                 <h3 style="font-weight: normal; text-transform: none;">Owned by: <b>the States</b></h3>
             </div>
-
         </section>
 
-        <section id="fastapi-title">
+        <section id="gnaf" data-background="graphics/background/gnaf-0.png"></section>
+
+        <section id="title-fastapi">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
                 <div style="font-size: 200%">FastAPI</div>
             </div>
@@ -191,8 +194,25 @@ $ uvicorn main:app --reload
 <span style="color: green;">INFO</span>:  Waiting for application startup.
 <span style="color: green;">INFO</span>:  Application startup complete.
 				</pre>
+            <code class="fragment">github.com/elena/FastAPI-Geo-talk</code>
+        </section>
+        <section id="flask-doc" data-background="graphics/docs.png">
+            <div style="position: relative; width: 55%; margin-left: 280px; top: -280px; background-color: rgba(0, 0, 0, 0.8); color: #fff; padding: 20px;">
+                <pre style="font-size: 0.6em">http://localhost:8000<b>/docs</b></pre>
+                <div style="font-size: 0.5em; color: rgba(255, 255, 255, 0.5); text-align: left; margin-left: 25px">Self-generated OpenAPI documentation</div>
+            </div>
         </section>
 
+
+        <section id="fin">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%">FIN</div>
+            </div>
+            <br>
+            <p>Come speak at the:<br><b>Canberra Python User Group</b></p>
+            <br>
+            <p>Support/be a coach at:<br><b>DjangoGirls</b></p>
+        </section>
 
 
     </div>
