add placeholder slides

--- a/static/index.html
+++ b/static/index.html
@@ -204,6 +204,158 @@ $ uvicorn main:app --reload
         </section>
 
 
+
+        <section id="eg2-code-park">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="eg2-sawtooth">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="eg2-predictive">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+
+        <section id="title-pydantic">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-bdfl">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-typehints">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-validation-basic">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-validation-Literal">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-validation-models-geopoints">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-validation-chekhov">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+
+        <section id="eg3-baseModel">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="eg3-params">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="eg3-address">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="eg3-address-full-real">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+
+        <section id="GeoJSON-RFC-7946">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="geojson-rfc">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="geojson-leaflet">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="geojson-feature-feature-collections">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="geojson-validation-field">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="geojson-point-polys">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="geojson-quadruple-nested">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+
+        <section id="eg4-layer-graphic">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="eg4-addProps-ABS">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="eg4-addProps-landparcels">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="eg4-async-gather">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+
+        <section id="pydantic-limits-custom-validation">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-limits-method-property">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-limits-attributes">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+        <section id="pydantic-limits-performance">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"></div>
+            </div>
+        </section>
+
         <section id="fin">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
                 <div style="font-size: 200%">FIN</div>
