slides: wip background

--- a/static/index.html
+++ b/static/index.html
@@ -71,6 +71,19 @@
             <p>Per abstract:<br><b>APIs! Async! Type validation! ISO standards!
                 Large geodata!</b></p>
         </section>
+
+        <section id="not-ga" data-background="graphics/background/geoscience.png">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"><span style="font-weight:bolder;">NOT</span> Geoscience Australia</div>
+            </div>
+        </section>
+        <section id="not-ga-strike" data-background="graphics/background/geoscience.png">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"><span style="font-weight:bolder; color: red">NOT</span> <del>Geoscience Australia</del></div>
+            </div>
+        </section>
+
+
         <section id="where-do-addresses-1" data-background="graphics/background/adelaide-planning.png">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
                 <b>Where do addresses come from?</b>
@@ -91,7 +104,7 @@
                 </div>
             </div>
         </section>
-        <section id="1994" data-background="graphics/background/1994.png">
+        <section id="1992" data-background="graphics/background/census.png">
             <div style="font-size: 125%; background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; margin-top: -300px">
                 <b>Australia 1994: <img height="70px" style="top: 20px; margin: -20px 0;" src="/graphics/background/ABS.gif"> Census year</b>
             </div>
@@ -109,6 +122,11 @@
         </section>
 
         <section id="gnaf" data-background="graphics/background/gnaf-0.png"></section>
+        <section id="gnaf-monster" data-background="graphics/background/gnaf-1.png">
+            <div style="background-color: rgba(0, 0, 0, 0.4); color: #fff; padding: 20px;">
+                <div style="font-size: 100%">G-NAF (2004) &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; G-NAF-Core (2022)</div>
+            </div>
+        </section>
 
         <section id="title-fastapi">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
